<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context="com.aymerikaboso.calculator.activite.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="1"
            android:rowCount="7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_gravity="center|fill"
                android:layout_row="0"
                android:layout_rowSpan="2"
                android:background="@drawable/bordure"
                android:lines="2"
                android:maxLines="2"
                android:scrollbarAlwaysDrawVerticalTrack="false"
                android:scrollbars="vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button14"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/bouton_C"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                    android:textColor="@color/couleur_annuler"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/button15"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/bouton_A"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button37"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/bouton_effacer_caractere"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/button9"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/bouton_puissance"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/couleur_operateurs_fonctions" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button21"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/bouton_7"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

                <Button
                    android:id="@+id/button22"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/bouton_8"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

                <Button
                    android:id="@+id/button23"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:shadowColor="@color/colorPrimary"
                    android:text="@string/bouton_9"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

                <Button
                    android:id="@+id/button24"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/bouton_diviser"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    android:textColor="@color/couleur_operateurs" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button25"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/bouton_4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

                <Button
                    android:id="@+id/button26"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/bouton_5"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

                <Button
                    android:id="@+id/button27"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/bouton_6"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

                <Button
                    android:id="@+id/button28"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/bouton_multiplier"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    android:textColor="@color/couleur_operateurs" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button29"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/bouton_1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

                <Button
                    android:id="@+id/button30"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/bouton_2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

                <Button
                    android:id="@+id/button31"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/bouton_3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

                <Button
                    android:id="@+id/button32"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/bouton_moins"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    android:textColor="@color/couleur_operateurs" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button33"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill_vertical|fill_horizontal"
                    android:layout_weight="1"
                    android:text="@string/bouton_point"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button34"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill_horizontal"
                    android:layout_weight="1"
                    android:text="@string/bouton_0"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

                <Button
                    android:id="@+id/button35"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill_vertical|fill_horizontal"
                    android:layout_weight="1"
                    android:text="@string/bouton_plus"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    android:textColor="@color/couleur_operateurs" />

                <Button
                    android:id="@+id/button36"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/couleur_fond_bouton_egal"
                    android:text="@string/bouton_egal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    android:textColor="@android:color/background_light"
                    tools:layout_editor_absoluteX="156dp"
                    tools:layout_editor_absoluteY="540dp" />

            </LinearLayout>
        </GridLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>